PKS workshop day 1 and 3 content

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 layout: page
 title: PKS Workshop
-subtitle: An introductory workshop for PKS
+subtitle: An introductory workshop for Pivotal Container Service
 use-site-title: true
 ---
 
